--- a/package.json
+++ b/package.json
@@ -20,11 +20,14 @@
   "homepage": "https://github.com/Timo-Celik/michelle-jacoedo-gmbh#readme",
   "dependencies": {
     "animate.css": "^4.1.1",
+    "normalize.css": "^8.0.1",
     "page-flip": "^2.0.7"
   },
   "devDependencies": {
+    "copy-webpack-plugin": "^8.1.1",
     "css-loader": "^5.2.4",
     "html-webpack-plugin": "^5.3.1",
+    "mini-css-extract-plugin": "^1.6.0",
     "sass": "^1.32.13",
     "sass-loader": "^11.1.1",
     "style-loader": "^2.0.0",
